# blue_super

./: .gitignore  README.md  ffigen.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/: Podfile
example/macos/Runner/: Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: blue_super.podspec
ios/Classes/: blue_super.c
lib/: blue_super.dart  blue_super_bindings_generated.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/api/: blue.dart  blue.freezed.dart  log.dart
linux/: CMakeLists.txt
macos/: blue_super.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: blue.rs  log.rs  mod.rs
src/: CMakeLists.txt  blue_super.c
windows/: CMakeLists.txt
(+1 files in other folders)
